# FreeRDP

./: CMakeCache.txt
channels/mobikey/: CMakeLists.txt  ChannelOptions.cmake
channels/mobikey/client/: CMakeLists.txt  mobikey_main.c  mobikey_main.h
client/Windows/: CMakeLists.txt  resource.h  wf_client.c  wf_client.h  wf_floatbar.c  wf_monitor.c  wf_monitor.h  wfreerdp.rc
client/Windows/cli/: wfreerdp.c
client/Windows/resource/: R1_return_active.pxf  R1_scan.pxf  R1_scan_active.pxf  R1_suspend.pxf  close.pxf  close_active.pxf  lock.pxf  lock_active.pxf  minimize.pxf  minimize_active.pxf  restore.pxf  restore_active.pxf  unlock.pxf  unlock_active.pxf
include/freerdp/: freerdp.h
libfreerdp/core/: nla.c  nla.h
